fixed history controller request dto, updated gitignore
